--- a/frontend/src/styles/components/_createstock.scss
+++ b/frontend/src/styles/components/_createstock.scss
@@ -5,7 +5,7 @@ $placeholderTextColor: rgba(160, 160, 160, 0.103);
 @mixin common-btn {
     border: none;
     border-radius: 25px;
-    padding: 1.5% 2% 1.5% 1.5%;
+    padding:2% 0 4.5%  0;
     font-size: 15px;
     margin:1%;
   }
@@ -34,20 +34,6 @@ $placeholderTextColor: rgba(160, 160, 160, 0.103);
 .header-flex-box-search{
     margin: 1%;
     width: 20%;
-    input[type = text]{
-        padding:2.5%;
-        width: 80%;
-        border-radius:0 20px  20px 0;
-        border: none;
-        font-size: 20px;
-        
-    }
-    .search-icon{
-        padding:2.6%;
-        border-radius:20px 0 0 20px;
-        background-color: white;
-        border-right: 1px solid $placeholderTextColor;
-    }
     input[type = text]::placeholder{
         color: $placeholderTextColor;
         font-style: italic;
@@ -86,24 +72,35 @@ $placeholderTextColor: rgba(160, 160, 160, 0.103);
 
 }
 .header-btns{
-    width: 70%;
-}
+    width: 50%;
+
   .create-btn-green{
     @include common-btn();
     background-color: $navBarBackgroundColor;
     color: white;
     width: 40%;
+ 
   }
   .create-btn-white{
     @include common-btn();
     background-color: white;
     width: 40%;
   }
+  .active-link{
+      button{
 
+        font-weight: bold;
+      }
+}
+}
   .create-stock-content{
     width: 100%;
     background-color: red;
   }
+.active-link{
+    font-weight: bold;
+}
+
 //for mobile device
 @media only screen and (max-width: 600px) {
     .header-flex-box{
