--- a/frontend/src/styles/components/_createstock.scss
+++ b/frontend/src/styles/components/_createstock.scss
@@ -1,16 +1,14 @@
 .createstock-container{
+
     position: absolute;
     background:white;
-    top: 8%; 
+    top: 20%; 
     left:8%;
     width: 62%;
-    .createstock-title{
-        font-size: 28px;
-        width: 50%;
-        margin: auto;
-        text-align: center;
-        border-bottom: lightgray 2px solid;
+    .h1{
+        font-size: 10px;
     }
+   
     .createstock-fields{
         width: 70%;
         margin: auto;
@@ -26,5 +24,10 @@
     }
     input:focus{
         border: 2px solid red;
+    
     }
+}
+.login-submit-btn{
+    background-color: yellow;
+
 }
