--- a/frontend/src/styles/styles.scss
+++ b/frontend/src/styles/styles.scss
@@ -8,3 +8,9 @@
 @import './components/trades';
 @import './components/mystock';
 @import './components/initiatedstock';
+@import './components/navbar';
+@import './components/footer';
+@import './components/profile';
+@import './components/publichomepage';
+
+
