--- a/frontend/src/styles/components/_notification.scss
+++ b/frontend/src/styles/components/_notification.scss
@@ -1,9 +1,9 @@
 .notifications-container{
     position: absolute;
     right:1%;
-    top:8%;
-    background-color: white;
-    border-color: black;
+    top:14%;
+    background-color:white;
+    border-color: red;
     border-width: 20px;
     width: 25%;
 }
@@ -14,6 +14,7 @@
     margin-top:5%;
     font-size: 20px;
     text-align: center;
+    
 }
 .notification-contents{
     
@@ -21,6 +22,7 @@
     padding-top:30px;
     width:90%;
     margin:auto;
+
 }
 .notification-text{
     width: 80%;
