--- a/frontend/src/styles/components/_trades.scss
+++ b/frontend/src/styles/components/_trades.scss
@@ -4,7 +4,7 @@
 .recenttrades-container{
     position: absolute;
     right:1%;
-    top:8%;
+    top:21.5%;
     width:25%;
     box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
     background-color: white;
@@ -25,6 +25,7 @@
     margin:3% ;
     font-weight: bold;
     font-size: 17px;
+    border-radius: 1%;
     // margin-top:5%;
 }
 .recenttrade-indicators{
