--- a/frontend/src/styles/components/_publichomepage.scss
+++ b/frontend/src/styles/components/_publichomepage.scss
@@ -27,12 +27,27 @@
     
   }
   
-  .text-block {
+ 
+  .text-block1{
     position: absolute;
-    bottom: 200px;
+    bottom: 620px;
     left: 5%;
     color: white;
     padding-left: 0px;
     padding-right: 400px;
+    
      
   }
+  .text-block{
+    position: absolute;
+    bottom: 130px;
+    left: 5%;
+    color: white;
+    padding-left: 0px;
+    padding-right: 400px;
+    
+     
+  }
+
+
+  
