--- a/frontend/src/styles/components/_initiatedstock.scss
+++ b/frontend/src/styles/components/_initiatedstock.scss
@@ -12,59 +12,252 @@ $placeholderTextColor: rgba(160, 160, 160, 0.103);
 
 .header-flex-box {
     display: flex;
+    
+   
 
   }
+  //------------------------------------------------------------------
 
-.header-flex-box-title{
-    width: 30%;
-    .header-title{
-        font-weight: bold;
-        font-size: 25px;   
-    }
 
+#components-layout-demo-custom-trigger .trigger {
+  font-size: 18px;
+  line-height: 64px;
+  padding: 0 24px;
+  cursor: pointer;
+  transition: color 0.3s;
 }
-.menu-unfold-btn{
-    margin: 0 10% 0 3%;
-    border: none;
-    background: none;
-    cursor: pointer;
+
+#components-layout-demo-custom-trigger .trigger:hover {
+  color: red;
 }
+
+#components-layout-demo-custom-trigger .logo {
+  height: 32px;
+  background: red;
+  margin: 160px;
+}
+
+.site-layout .site-layout-background {
+  background: #fff;
+}
+
+#components-layout-demo-fixed-sider .logo {
+    height: 32px;
+    background: rgba(255, 255, 255, 0.2);
+    margin: 16px;
+  }
+  
+
+// ------------------------------------------------------------------
+
 
 
 .header-flex-box-search{
-    margin: 1%;
-    width: 20%;
+    margin-left: 100px;
+    width: 500px;
+    border-radius: 1;
+    
+   
     input[type = text]::placeholder{
         color: $placeholderTextColor;
         font-style: italic;
+        
     }
 }
 .header-flex-box-menu{
     width: 40%;
+    margin-top: 20px;
+}
+.publichomepage-container{
+
+    background-color: transparentize($color: rgb(46,175,143), $amount: 1%);
+    height: 100px;
+   
+   
+  
+    ul{
+        list-style-type: none;
+        background-color: transparentize($color: (#CEECE8), $amount: 0.2%); 
+        margin-top:0px ;
+        height: 90px;
+        font-weight: bold;
+        font-size: 15px; 
+        font-family:'BlinkMacSystemFont';
+      
+        .header-title{
+          font-weight: bold;
+          font-size: 22px; 
+          font-family:'Time Roman'; 
+          margin-left :10px; 
+      }  
+      .menu-unfold-btn{
+          margin-left: 10px;
+          border: none;
+          background: none;
+          cursor: pointer;
+          padding: 0px;
+       
+      }
+
+      
+
+        li{
+            display: inline-block;
+            margin: 0%;
+            padding: 20 1% 0.2% 0.5%;
+            margin-top:25px ;
+            //border-bottom:1px solid white;
+            font-size: 23;
+            
+
+        }
+        
+    }
+    .ul-side3{
+        margin-left: 235px;
+        background-color: transparentize($color: rgb(46,175,143), $amount: 1%); 
+        
+        li{
+            display: inline-block;
+            margin: 0%;
+            margin-right:25px ;
+            padding: 20 10 2% 5%;
+            border: solid transparentize($color: white, $amount: 0.7%) ; 
+            border-width: 0px 0px 0px 1px;
+            
+
+            text-align: center;
+            
+        }
+        
+    }
+
+    .ul-side1{
+        margin-left: 147px;
+        background-color: transparentize($color: rgb(46,175,143), $amount: 1%); 
+        
+        li{
+            display: inline-block;
+            margin: 0%;
+            margin-right:25px ;
+            padding: 20 10 2% 5%;
+            border: solid transparentize($color: white, $amount: 0.7%) ; 
+            border-width: 0px 0px 0px 1px;
+            
+
+            text-align: center;
+            
+        }
+        
+    }
+      
+   .ul-side{
+      margin-left: 358px;
+    
+      background-color: transparentize($color: rgb(46,175,143), $amount: 1%); 
+      
+      li{
+          display: inline-block;
+          margin: 0%;
+          margin-right:25px ;
+          padding: 20 10 2% 5%;
+          border: solid transparentize($color: white, $amount: 0.7%) ; 
+          border-width: 0px 0px 0px 1px;
+          //text-align: center;
+          
+      }
+      
+  }
+
+    a{
+        text-decoration: underline rgb(250,250,250);
+        color:black;
+    }
 }
 
-  .header-container{
 
-      background-color: $headerBackgroundColor;
+  .header-container {
+
+      background-color: $headerBackgroundColor ;
+     
+     
+    
+       
       ul{
           list-style-type: none;
+          background-color: transparentize($color: (#CEECE8), $amount: 0.2%); 
+          margin-top:0px ;
+          height: 90px;
+          font-weight: bold;
+          font-size: 15px; 
+          font-family:'BlinkMacSystemFont';
+        
+          .header-title{
+            font-weight: bold;
+            font-size: 22px; 
+            font-family:'Time Roman'; 
+            margin-left :10px; 
+        }  
+        .menu-unfold-btn{
+            margin-left: 10px;
+            border: none;
+            background: none;
+            cursor: pointer;
+            padding: 0px;
+         
+        }
+
+        
 
           li{
-              display: inline;
-              margin: 1%;
-              padding: 0 1% 0.2% 0.5%;
-              border-right:1px solid white;
+              display: inline-block;
+              margin: 0%;
+              padding: 20 1% 0.2% 0.5%;
+              margin-top:25px ;
+              //border-bottom:1px solid white;
+              font-size: 23;
+              
 
           }
           
       }
+
+        
+     .ul-side{
+        margin-left: 160px;
+        background-color: transparentize($color: rgb(46,175,143), $amount: 1%); 
+        
+        li{
+            display: inline-block;
+            margin: 0%;
+            margin-right:5px ;
+            padding: 20 10 2% 5%;
+            border: solid transparentize($color: white, $amount: 0.8%) ; 
+            border-width: 0px 0px 0px 1px;
+            //text-align: center;
+            
+           
+           
+            
+
+        }
+        
+
+       
+    
+    
+        
+    }
+   
+
       a{
           text-decoration: underline rgb(250,250,250);
           color:black;
       }
-      .header-icon{
-          margin: 0.71%;
 
+      .header-icon{
+          margin: 300;
+          padding: 15px;
       }
   }
   .header-icon-btn{
@@ -73,6 +266,8 @@ $placeholderTextColor: rgba(160, 160, 160, 0.103);
 }
 .header-btns{
     width: 50%;
+    height: 70px;
+
 
   .create-btn-green{
     @include common-btn();
@@ -99,7 +294,12 @@ $placeholderTextColor: rgba(160, 160, 160, 0.103);
   }
 .active-link{
     font-weight: bold;
+
 }
+
+
+
+
 
 //for mobile device
 @media only screen and (max-width: 600px) {
@@ -125,11 +325,12 @@ width: 100%;
                 display: inline;
                 margin: 1%;
                 padding: 0 1% 0.2% 0.5%;
-                border-right:1px solid white;
+                //border-right:0px solid white;
   
-            }
-            
+             
         }
+
+            }
     }
     .create-btn-green{
         @include common-btn();
@@ -147,6 +348,7 @@ width: 100%;
 @media only screen and (max-width: 760px) {
     .header-flex-box-search{
         width: 100%;
+        
     }
 }
 
@@ -196,7 +398,7 @@ width: 100%;
         .apply-btn{
             background-color:#0fd4aa;
             border: none;
-            border-radius: 20px;;
+            border-radius: 120px;
             font-weight: bolder;
             padding: 10px 20px 10px 20px;
         }
