--- a/frontend/src/styles/components/_signup.scss
+++ b/frontend/src/styles/components/_signup.scss
@@ -1,73 +1,114 @@
 .signup-container{
-    margin-top: 0%;  
-    background-color: white;
-       
-   }
-   .signup-content{
-       width:800px;
-       margin-top: 0%;
-       //margin-left:0%;
-   h1{
-       margin-left: 70%;
-       color: gray;
-       font-style: italic;
-       margin-top: 0;
-   }
-   button {
-     background-color: #f29544;
-     border-color: #f29544;
-     font-size: 20px;
-     font-weight: 600;
-     //padding-bottom: 10px;
-     margin: 20px 0px 0px 0px;
-     width: 90%;
-   }
-   
-   
-   }
-   .menu-signup{
-       margin-top: -7%;
-       color: gray;
-       font-style: italic;
-   
-   }
-   // .Signup-contleft{
-   //     margin-left: 800px;
-   //     margin-top:-200%;
-   //     margin-bottom:0px ;
-   //     //padding: 0px 1000px 10px 10px;
-   // }
-   
-   .signup-right-side{
-       margin-top: -69%;
-       width: 55%;
-       margin-left: 90%;
-     }
-     h1{
-       margin-left: 25%;;
-     }
-   
-     .Signup-contleft{
-       margin: 15% 0 0 15%;
-       width: 65%;
-       border-right: solid 1px lightgray;
-       margin-top: 6%;
-       padding: 5%;
-      
-      
-   
-       p{
-         padding:1%;
-         font-size: 20px;
-       }
-       .icon{
-         padding:1%;
-       }
+
+  margin-top: 10%; 
+  //position: relative;
+  width:100%;
+  display: inline-block
      
-     }
+    
+}
+.signup-content{
+    width:800px;
+    display: inline-block;
+    width:100%;
+    margin-top: 0%;
+    //margin-left:0%;
+h1{
+    margin-left: 70%;
+    color: gray;
+    font-style: italic;
+    margin-top: 0;
+}
+button {
+  background-color: rgb(46,175,143);
+  border-color:rgb(46,175,143);
+  font-size: 15px;
+  font-weight: 600;
+  color:white;
+  //padding-bottom: 10px;
+  margin: 20px 0px 0px 0px;
+  width: 50%;
+  margin-left: 25%;
+
+}
+
+
+}
+
+.menu-signup{
+    margin-top: -7%;
+    color: gray;
+    font-style: italic;
+
+}
+// .Signup-contleft{
+//     margin-left: 800px;
+//     margin-top:-200%;
+//     margin-bottom:0px ;
+//     //padding: 0px 1000px 10px 10px;
+// }
+
+
+
+.signup-right-side{
+    margin-top: -29.5%;
+    //width: 55%;
+    margin-left: 50%;
+    border-left: solid 1px lightgray;
+    
+    padding: 3%;
+  }
+  h1{
+    margin-left: 25%;;
+  }
+  
+
+  .Signup-contleft{
+    margin: 15%  15%;
+    width: 65%;
+    border-right: solid 1px lightgray;
+
+    margin-top: 10%;
+    padding: 5%;
    
-     .Reg-But{
-        width: 100%;
-        margin-left: 30%;
-        color: rgb(46,175,143);
-     }
+   
+
+    p{
+      padding:1%;
+      font-size: 20px;
+    }
+    .icon{
+      padding:1%;
+    }
+  
+  }
+
+  .Reg-But{
+     //width: 100%;
+     margin-left: 30%;
+     color: rgb(46,175,143);
+  }
+  .signup-left-side{
+    margin-left:5%;
+    margin-top:3%;
+    
+  }
+  // .SignUp-But{
+  //   width: 300px;
+  //   margin-left: 35%;
+  //   //height: 200px;
+  //   //background-color: red;
+ 
+ 
+
+  // }
+  .Save-But{
+    //width: 100%;
+    margin-left: 30%;
+    color: rgb(46,175,143);
+ }
+
+  .Card-signup{
+    margin-top: -200px;
+    margin-left:200px;
+  }
