--- a/frontend/src/styles/components/_signup.scss
+++ b/frontend/src/styles/components/_signup.scss
@@ -19,21 +19,22 @@ h1{
     font-style: italic;
     margin-top: 0;
 }
-button {
-  background-color: rgb(46,175,143);
-  border-color:rgb(46,175,143);
-  font-size: 15px;
-  font-weight: 600;
-  color:white;
-  //padding-bottom: 10px;
-  margin: 20px 0px 0px 0px;
-  width: 50%;
-  margin-left: 25%;
+// #login-in-signup{}
+  #register-btn {
+    background-color: rgb(46,175,143);
+    border-color:rgb(46,175,143);
+    font-size: 15px;
+    font-weight: 600;
+    color:white;
+    //padding-bottom: 10px;
+    margin: 20px 0px 0px 0px;
+    width: 50%;
+    margin-left: 25%;
 
+  }
 }
 
 
-}
 
 .menu-signup{
     margin-top: -7%;
